<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="left"
    android:orientation="vertical"
    android:padding="10dp">

    <RadioGroup
        android:id="@+id/rgFileType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/uhf_title_open" />

        <RadioButton
            android:id="@+id/rbLock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uhf_title_lock" />

        <CheckBox
            android:id="@+id/cbPerm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="@string/uhf_forever" />
    </RadioGroup>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <CheckBox
            android:id="@+id/cbKill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uhf_title_kill" />

        <CheckBox
            android:id="@+id/cbAccess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uhf_title_access" />

        <CheckBox
            android:id="@+id/cbEPC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uhf_title_uii" />

        <CheckBox
            android:id="@+id/cbTid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uhf_title_tid" />

        <CheckBox
            android:id="@+id/cbUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uhf_title_user" />
    </LinearLayout>
</LinearLayout>
