<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvMode"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spMode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:entries="@array/arrayMode"
                android:gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <Button
                android:id="@+id/BtSetFre"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btSetFre"
                android:textSize="16sp" />

            <Button
                android:id="@+id/BtGetFre"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="@string/btGetFre"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uhf_title_power"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spPower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/arrayPower"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="dBm" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <Button
                android:id="@+id/btnSetPower"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/uhf_btn_setpower"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnGetPower"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="@string/uhf_btn_getpower"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvProtocol"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spProtocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/arrayProtocol"
                android:gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <Button
                android:id="@+id/btnSetProtocol"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btSetProtocol" />

            <Button
                android:id="@+id/btnGetProtocol"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btGetProtocol" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="@string/title_buzzer"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <Button
                android:id="@+id/btnBeepOpen"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_buzzer_open"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnBeepClose"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="@string/title_buzzer_close"
                android:textSize="16sp" />
        </LinearLayout>

        <CheckBox
            android:visibility="gone"
            android:id="@+id/cbVoiceCues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voice_cues"
            android:padding="5dp"/>
    </LinearLayout>
</ScrollView>
